사용자 신고 저장 및 조회, 삭제 기능 구현
Signed-off-by: 목포해양대 공과대학 <20193329@stu.mmu.ac.kr>